--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <p><span>thiendnnph53421@gmail.com</span></p>
       </div>
       <div class="col-md-6 text-center">
-        <img src="https://scontent.fhan2-5.fna.fbcdn.net/v/t39.30808-6/431680850_250427148137540_6647205377527942867_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee...66942439" alt="Ảnh đại diện" class="profile-img">
+        <img src="ảnh.jpg" alt="ảnh" class="anh-jpg">
       </div>
     </div>
     
