--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <p><span>thiendnnph53421@gmail.com</span></p>
       </div>
       <div class="col-md-6 text-center">
-        <img src="ảnh.jpg" alt="ảnh" class="anh-jpg">
+        <img src="20210511_171640.jpg" alt="ảnh" class="anh-jpg">
       </div>
     </div>
     
