--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
     }
 
     .profile-img {
-      max-width: 15px; /* Kích thước mới của ảnh */
+      max-width: 200px; /* Kích thước mới của ảnh */
       height: auto;
       border-radius: 50%;
     }
 
-    @media (max-width: 50px) {
+    @media (max-width: 768px) {
       .profile-img {
         max-width: 100%; /* Đảm bảo hình ảnh rộng hơn */
       }
@@ -74,7 +74,7 @@
         <p><span>thiendnnph53421@gmail.com</span></p>
       </div>
       <div class="col-md-6 text-center">
-        <img src="20210511_171640.jpg" alt="ảnh" class="anh-jpg">
+        <img src="https://mega.com.vn/media/news/1406_hinh-nen-doraemon-4k55.jpg">
       </div>
     </div>
     
