--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <p><span>thiendnnph53421@gmail.com</span></p>
       </div>
       <div class="col-md-6 text-center">
-        <img src="https://mega.com.vn/media/news/1406_hinh-nen-doraemon-4k55.jpg" alt="Profile Image" class="profile-img">
+        <img src="ANHDAIDIEN.jpg" alt="Ảnh đại diện" class="profile-img">
       </div>
     </div>
     
